--- a/app/src/main/res/layout/mainmenulayout.xml
+++ b/app/src/main/res/layout/mainmenulayout.xml
@@ -301,7 +301,7 @@
                 android:id="@+id/profileBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@drawable/achievement"
+                android:background="@drawable/icon_stats"
                 android:layout_row="0"
                 android:layout_column="2"
                 android:layout_columnWeight="1"
@@ -312,7 +312,7 @@
                 android:id="@+id/rateappBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@drawable/achievement"
+                android:background="@drawable/icon_rate"
                 android:layout_row="0"
                 android:layout_column="3"
                 android:layout_columnWeight="1"
@@ -323,7 +323,7 @@
                 android:id="@+id/shareBtn"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@drawable/achievement"
+                android:background="@drawable/icon_share"
                 android:layout_row="0"
                 android:layout_column="4"
                 android:layout_columnWeight="1"
