--- a/app/src/main/res/values-es/Spanish.xml
+++ b/app/src/main/res/values-es/Spanish.xml
@@ -118,7 +118,7 @@
     <string name="points">Puntuación</string>
     <string name="time">Hora</string>
     <string name="draw">Estirado :)</string>
-    <string name="question">pregunta</string>
+    <string name="question">Pregunta</string>
     <string name="twoplayersinfo">Bienvenido a Smart Kids Two Players \n Encuentra la respuesta correcta lo antes posible.</string>
     <string name="sharebody">¿Confías en tus matemáticas? \n https://play.google.com/store/apps/details?id=com.smartkids.akillicocuklar2</string>
     <string name="sharesub">¡He encontrado una gran aplicación de matemáticas!</string>
