--- a/app/src/main/res/values-fr-rFR/French.xml
+++ b/app/src/main/res/values-fr-rFR/French.xml
@@ -130,7 +130,7 @@ For all inquiries please write to salginerdem@gmail.com.</string>
     <string name="points">But</string>
     <string name="time">Temps</string>
     <string name="draw">Tiré :)</string>
-    <string name="question">question</string>
+    <string name="question">Question</string>
     <string name="twoplayersinfo">Bienvenue à Smart Kids Two Players! \n Trouvez la bonne réponse dès que possible!</string>
     <string name="sharebody">Avez-vous confiance en vos maths? \n https://play.google.com/store/apps/details?id=com.smartkids.akillicocuklar2</string>
     <string name="sharesub">J ai trouvé une bonne application de maths!</string>
