--- a/app/src/main/res/values-it/Itallian.xml
+++ b/app/src/main/res/values-it/Itallian.xml
@@ -116,7 +116,7 @@
     <string name="points">Punto</string>
     <string name="time">Tempo</string>
     <string name="draw">disegnato:)</string>
-    <string name="question">domanda</string>
+    <string name="question">Domanda</string>
     <string name="twoplayersinfo">Benvenuto su Smart Kids Due giocatori! \n Trova la risposta corretta il prima possibile!</string>
     <string name="sharebody">Ti fidi della tua matematica? \n https://play.google.com/store/apps/details?id=com.smartkids.akillicocuklar2</string>
     <string name="sharesub">Ho trovato un ottima applicazione matematica!</string>
