--- a/app/src/main/res/values-tr/Turkce.xml
+++ b/app/src/main/res/values-tr/Turkce.xml
@@ -110,7 +110,7 @@
     <string name="points">Puan</string>
     <string name="time">Zaman</string>
     <string name="draw">Berabere :)</string>
-    <string name="question">soru</string>
+    <string name="question">Soru</string>
     <string name="twoplayersinfo">Smart Kids Two Players a Hosgeldin! \n Soruları mümkün olduğunca hızlı çöz!</string>
     <string name="sharebody">Matematiğine güveniyor musun? \n https://play.google.com/store/apps/details?id=com.smartkids.akillicocuklar2</string>
     <string name="sharesub">Harika bir matematik uygulaması buldum!</string>
