--- a/app/src/main/res/drawable/btn_score.xml
+++ b/app/src/main/res/drawable/btn_score.xml
@@ -3,12 +3,12 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:endColor="#7af939"
-        android:startColor="#3eb800" />
+        android:endColor="@color/amber_plt"
+        android:startColor="@color/orange_plt" />
     <corners android:radius="8dp" />
     <stroke
         android:width="2dp"
-        android:color="#000" />
+        android:color="@color/light_black" />
 
 
 </shape>
