--- a/app/src/main/res/drawable/nextbuttongroup.xml
+++ b/app/src/main/res/drawable/nextbuttongroup.xml
@@ -3,12 +3,12 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:endColor="#f493dc"
-        android:startColor="#ff27ca" />
-    <corners android:radius="20dp" />
+        android:endColor="@color/light_blue_plt"
+        android:startColor="@color/indigo_plt" />
+    <corners android:radius="8dp" />
     <stroke
         android:width="2dp"
-        android:color="#000" />
+        android:color="@color/light_black" />
 
 
 </shape>
