--- a/app/src/main/res/drawable/siklar.xml
+++ b/app/src/main/res/drawable/siklar.xml
@@ -3,9 +3,9 @@
 android:shape="rectangle">
 <gradient
     android:angle="90"
-    android:endColor="#ffde77"
-    android:startColor="#fb8b01" />
-<corners android:radius="20dp" />
+    android:endColor="@color/menu1"
+    android:startColor="@color/orange" />
+<corners android:radius="8dp" />
 <stroke
     android:width="2dp"
     android:color="#000" />
