--- a/app/src/main/res/layout/alert_difficulty.xml
+++ b/app/src/main/res/layout/alert_difficulty.xml
@@ -119,10 +119,10 @@
             app:layout_constraintStart_toStartOf="@id/guideline_vertical05"
             app:layout_constraintEnd_toEndOf="@id/guideline_vertical98"
             android:background="@drawable/siklar"
-            android:fontFamily="@font/justsay"
+            android:fontFamily="@font/mclaren"
             android:text="@string/choosedifficulty"
             android:textAllCaps="false"
-            android:textSize="@dimen/header_bigger"
+            android:textSize="@dimen/header_big"
             android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -134,10 +134,11 @@
             app:layout_constraintStart_toStartOf="@id/guideline_vertical15"
             app:layout_constraintEnd_toEndOf="@id/guideline_vertical85"
             android:background="@drawable/siklarclicked"
-            android:fontFamily="@font/comic"
+            android:fontFamily="@font/mclaren"
             android:text="@string/easy"
+            android:textColor="@color/light_black"
             android:textAllCaps="false"
-            android:textSize="16sp"
+            android:textSize="@dimen/skorpuanı"
             android:textStyle="bold"
             android:onClick="difficultyClick"/>
 
@@ -151,10 +152,11 @@
             app:layout_constraintStart_toStartOf="@id/guideline_vertical15"
             app:layout_constraintEnd_toEndOf="@id/guideline_vertical85"
             android:background="@drawable/nextbuttongroup"
-            android:fontFamily="@font/comic"
+            android:fontFamily="@font/mclaren"
             android:text="@string/moderate"
+            android:textColor="@color/dahakirlibeyaz"
             android:textAllCaps="false"
-            android:textSize="16sp"
+            android:textSize="@dimen/skorpuanı"
             android:textStyle="bold"
             android:onClick="difficultyClick"/>
 
@@ -168,10 +170,11 @@
             app:layout_constraintStart_toStartOf="@id/guideline_vertical15"
             app:layout_constraintEnd_toEndOf="@id/guideline_vertical85"
             android:background="@drawable/hatalisik"
-            android:fontFamily="@font/comic"
+            android:fontFamily="@font/mclaren"
+            android:textColor="@color/dahakirlibeyaz"
             android:text="@string/hard"
             android:textAllCaps="false"
-            android:textSize="16sp"
+            android:textSize="@dimen/skorpuanı"
             android:textStyle="bold"
             android:onClick="difficultyClick"/>
 
