--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -96,4 +96,21 @@
 
 
 
+
+
+    <color name="orange_plt">#E64A19</color>
+    <color name="gray_plt">#616161</color>
+    <color name="amber_plt">#FFA000</color>
+    <color name="light_blue_plt">#0288D1</color>
+    <color name="blue_plt">#1976D2</color>
+    <color name="indigo_plt">#303F9F</color>
+    <color name="purple_deep_plt">#512DA8</color>
+    <color name="purple_plt">#7B1FA2</color>
+    <color name="pink_plt">#C2185B</color>
+    <color name="red_plt">#d32f2f</color>
+    <color name="green_plt">#388E3C</color>
+    <color name="light_black">#272525</color>
+    <color name="soru_box">#fdedcf</color>
+
+
 </resources>
