--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="sorunumarasi">38sp</dimen>
+    <dimen name="sorunumarasi">34sp</dimen>
     <dimen name="sorusayilar">32sp</dimen>
     <dimen name="sorumetni">16sp</dimen>
     <dimen name="siklar">24sp</dimen>
     <dimen name="testibitir">18sp</dimen>
-    <dimen name="skorpuanı">18sp</dimen>
-    <dimen name="nextquestion">18sp</dimen>
+    <dimen name="skorpuanı">20sp</dimen>
+    <dimen name="nextquestion">16sp</dimen>
+    <dimen name="anwerbtn">16sp</dimen>
 
     <dimen name="char_item_height">200dp</dimen>
     <dimen name="slider_item_height">250dp</dimen>
@@ -22,9 +23,6 @@
     <dimen name="header_big">22sp</dimen>
     <dimen name="text_normal">16sp</dimen>
     <dimen name="text_oruntu">16sp</dimen>
-
-
-
 
 
 
