--- a/app/src/main/res/layout/mainmenulayout.xml
+++ b/app/src/main/res/layout/mainmenulayout.xml
@@ -254,7 +254,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:background="@android:color/transparent"
-            android:fontFamily="@font/comic"
+            android:fontFamily="@font/mclaren"
             android:onClick="leveldurumu"
             android:text="LEVEL 1"
             android:textAlignment="center"
@@ -634,8 +634,9 @@
             app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal99d"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/siklarclicked"
-            android:fontFamily="@font/comic"
+            android:background="@drawable/cevapbtn"
+            android:fontFamily="@font/mclaren"
+            android:textColor="@color/light_black"
             android:text="@string/backtokonular"
             android:textAllCaps="false"
             android:textSize="@dimen/text_normal"
