--- a/app/src/main/res/layout/ritmik_oruntu_layout.xml
+++ b/app/src/main/res/layout/ritmik_oruntu_layout.xml
@@ -88,21 +88,18 @@
             android:layout_width="wrap_content"
             android:layout_height="1dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.30" />
+            app:layout_constraintGuide_percent="0.40" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_horizontal60"
             android:layout_width="wrap_content"
             android:layout_height="1dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.60" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal70"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.70" />
+
+
+
+
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical30"
@@ -138,6 +135,21 @@
             app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal30"
             app:layout_constraintStart_toStartOf="@id/guideline_vertical02"
             app:layout_constraintEnd_toEndOf="@id/guideline_vertical98">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_vertical30s"
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.15" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_vertical70s"
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.85" />
+
 
             <GridLayout
                 android:id="@+id/gridboard"
@@ -248,6 +260,26 @@
 
 
             </GridLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/ipucuBtn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="@color/gray_plt"
+                android:onClick="tamamla"
+                android:text="@string/testibitir"
+                android:textAllCaps="false"
+                android:textSize="@dimen/nextquestion"
+                android:textColor="@color/white"
+                android:fontFamily="@font/mclaren"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline_vertical70s"
+                app:layout_constraintStart_toStartOf="@id/guideline_vertical30s"/>
+
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
