--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,7 +23,7 @@
     <dimen name="header_big">22sp</dimen>
     <dimen name="text_normal">16sp</dimen>
     <dimen name="text_oruntu">16sp</dimen>
-
+    <dimen name="grid_width">8dp</dimen>
 
 
 </resources>
