--- a/app/src/main/res/layout/time_challange_layout.xml
+++ b/app/src/main/res/layout/time_challange_layout.xml
@@ -59,11 +59,32 @@
             app:layout_constraintGuide_percent="0.5" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_horizontal60"
+            android:id="@+id/guideline_horizontal30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.30" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_horizontal75"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.75" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical35"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintGuide_percent="0.35" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical65"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.65" />
 
 
 
@@ -105,18 +126,48 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintTop_toTopOf="@id/guideline_horizontal60"
-            app:layout_constraintStart_toStartOf="@id/guideline_vertical25"
-            app:layout_constraintEnd_toEndOf="@id/guideline_vertical75"
+            app:layout_constraintTop_toTopOf="@id/guideline_horizontal75"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical35"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical65"
             android:background="@drawable/circle_btn"
             android:fontFamily="@font/mclaren"
             android:text="@string/go"
+            android:gravity="center_vertical|center_horizontal"
             android:textColor="@color/dahakirlibeyaz"
             android:textAllCaps="false"
             android:textSize="@dimen/giant"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:onClick="goGame"/>
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/guideline_horizontal30"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical25"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical75"
+            app:layout_constraintDimensionRatio="H,1:1"
+            android:src="@drawable/chrono"/>
+
+        <ImageView
+            android:id="@+id/chronoImg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/guideline_horizontal30"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical25"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical75"
+            app:layout_constraintDimensionRatio="H,1:1"
+            android:src="@drawable/chronoline"/>
+
+
+
+
+
+
+
+
+
+
 
 
 
