--- a/app/src/main/res/layout/time_challange_layout.xml
+++ b/app/src/main/res/layout/time_challange_layout.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_dark">
+    android:background="@color/orange">
 
 
 
@@ -39,6 +39,7 @@
         android:id="@+id/girisLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/ad_container"
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical98"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical05"
@@ -203,7 +204,7 @@
         app:layout_constraintEnd_toEndOf="@id/guideline_vertical98"
         app:layout_constraintStart_toStartOf="@id/guideline_vertical05"
         app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical15"
@@ -213,11 +214,67 @@
             app:layout_constraintGuide_percent="0.15" />
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical12"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.12" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical35q"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.34" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical43q"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.44" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical46q"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.45" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical54q"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.55" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical57q"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.56" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical65q"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.66" />
+
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_vertical85"
             android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.85" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_vertical88"
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.88" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_horizontal10b"
@@ -241,11 +298,34 @@
             app:layout_constraintGuide_percent="0.35" />
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_horizontal37"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.4" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_horizontal41"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.44" />
+
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_horizontal46"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.46" />
+
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_horizontal40b"
             android:layout_width="wrap_content"
             android:layout_height="1dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.50" />
+            app:layout_constraintGuide_percent="0.55" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_horizontal80b"
@@ -280,12 +360,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Soru 1"
+            android:text="@string/level"
             android:textColor="@color/light_black"
-            android:textSize="@dimen/sorunumarasi"
+            android:textSize="@dimen/level"
             android:background="@color/transparent"
             android:fontFamily="@font/mclaren"
-            android:textAllCaps="false"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="@id/guideline_horizontal03"
             app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal14"/>
@@ -376,6 +455,67 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ProgressBar
+            android:id="@+id/pointsbar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/siklarclicked"
+            android:max="100"
+            android:onClick="leveldurumu"
+            android:progressDrawable="@drawable/horizontal_progress_bar"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal41"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical88"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical12"
+            app:layout_constraintTop_toTopOf="@id/guideline_horizontal37" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/progressTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:background="@android:color/transparent"
+            android:onClick="leveldurumu"
+            android:text="%100"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal41"
+            app:layout_constraintTop_toTopOf="@id/guideline_horizontal37"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical88"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical12"/>
+
+        <ImageView
+            android:id="@+id/life1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/guideline_horizontal41"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical35q"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical43q"
+            app:layout_constraintDimensionRatio="H,1:1"
+            android:background="@drawable/heart01" />
+
+        <ImageView
+            android:id="@+id/life2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/guideline_horizontal41"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical46q"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical54q"
+            app:layout_constraintDimensionRatio="H,1:1"
+            android:background="@drawable/heart01" />
+
+        <ImageView
+            android:id="@+id/life3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/guideline_horizontal41"
+            app:layout_constraintStart_toStartOf="@id/guideline_vertical57q"
+            app:layout_constraintEnd_toEndOf="@id/guideline_vertical65q"
+            app:layout_constraintDimensionRatio="H,1:1"
+            android:background="@drawable/heart01" />
 
 
 
@@ -553,7 +693,7 @@
                 android:layout_height="0dp"
                 android:layout_centerVertical="true"
                 android:background="@drawable/nextbuttongroup"
-                android:onClick="tamamla"
+                android:onClick="pause"
                 android:text="@string/testibitir"
                 android:textAllCaps="false"
                 android:textSize="@dimen/nextquestion"
@@ -583,14 +723,14 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/nextquestionBtn"
+                android:id="@+id/pauseBtn"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_centerVertical="true"
                 android:background="@drawable/nextbuttongroup"
-                android:onClick="nextquestion"
+                android:onClick="pause"
                 android:fontFamily="@font/mclaren"
-                android:text="@string/sonrakisoru"
+                android:text="@string/pause"
                 android:textAllCaps="false"
                 android:textSize="@dimen/nextquestion"
                 android:textStyle="bold"
